Bag fix - text align center h1 text

--- a/src/assets/scss/components/home/hero.scss
+++ b/src/assets/scss/components/home/hero.scss
@@ -89,6 +89,7 @@
 
     @include mini-desktop {
       margin-bottom: 74px;
+      text-align: center;
     }
 
     @include tablet {
